# qualixar-os

./: .dockerignore  .gitignore  .npmignore  ATTRIBUTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  server.json  tsconfig.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
adapters/: README.md  __init__.py  adk_adapter.py  autogen_adapter.py  claude_managed_adapter.py  claude_managed_adapter.ts  claude_managed_sse.py  claude_managed_sse.ts  claude_managed_types.py  claude_managed_types.ts  client.py  conftest.py  crewai_adapter.py  langchain_adapter.py  pyproject.toml  run_tests.sh  test_adk.py  test_autogen.py  test_client.py  test_crewai.py  test_langchain.py
claude-code-plugin/: README.md  plugin.json
claude-code-plugin/agents/: qos-code-reviewer.md  (+5 more)
config/: example.azure-foundry.yaml  example.direct-api.yaml  example.ollama-local.yaml
dashboard/: package-lock.json  package.json  tsconfig.json  vite.config.ts
deploy/: README.md  azure-container-apps.md  fly-io.md  kubernetes.md  railway.md
docker/: .dockerignore  Dockerfile  Dockerfile.agent  docker-compose.yml
docs/: getting-started.md
registry-listings/: cursor-plugin.json  glama.json  mcp-marketplace.json  smithery.json
scripts/: postinstall.js
src/: api.ts  bootstrap.ts  index.ts  version.ts
tests/: api.test.ts  bootstrap-quality-monitors.test.ts  bootstrap.test.ts  index.test.ts  setup.test.ts
(+646 files in other folders)
